--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -41,7 +41,7 @@
             <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
             <ion-label>Theme Your App</ion-label>
         </ion-item>
-        <ion-item href="https://samin005.github.io/Store-AF/Sugarlock">
+        <ion-item (click)="loadSugarlock()">
             <ion-icon slot="start" color="medium" name="logo-octocat"></ion-icon>
             <ion-label>Sugarlock</ion-label>
         </ion-item>
